change about article

--- a/_posts/2019-2-16-虚拟机内Spark平台的搭建.md
+++ b/_posts/2019-2-16-虚拟机内Spark平台的搭建.md
@@ -1,6 +1,12 @@
 ---
 layout: article
 title: 虚拟机内Spark平台的搭建
+articles:
+  data_source: site.sample_page
+  show_cover: false
+  show_excerpt: true
+  show_readmore: true
+  show_info: true
 category: tools
 tags: tools
 ---
