Add Leetcode file

--- a/_posts/2018-8-15-Linux系统美化.md
+++ b/_posts/2018-8-15-Linux系统美化.md
@@ -2,7 +2,7 @@
 layout: article
 title: Linux的桌面美化
 key: 100002
-category: 其他
+category: blog
 tags: 其他
 date: 2018-08-15 13:00:00 +08:00
 modify_date: 2019-02-18 14:40:00 +08:00
