--- a/_posts/2019-2-16-虚拟机内Spark平台的搭建.md
+++ b/_posts/2019-2-16-虚拟机内Spark平台的搭建.md
@@ -2,7 +2,7 @@
 layout: article
 title: 虚拟机内Spark平台的搭建
 key: 100003
-category: tools
+category: blog
 tags: tools
 date: 2019-02-16 19:00:00 +08:00
 modify_date: 2019-02-18 14:40:00 +08:00
